--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,30 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+.customform {
+  width: 40%;
+  margin: 150px auto;
+}
+.customform-header {
+  margin: 0;
+}
+.customform__form {
+  display: flex;
+  flex-direction: column;
+}
+.customform__registerinfo {
+  font-size: 12px;
+}
+.customform__actions {
+  margin: 0;
+}
+
+.game__card {
+  margin: 30px;
+}
+
+.toolbar .mat-chip-list,
+.toolbar .mat-slide-toggle,
+.toolbar form {
+  margin-right: 30px;
+}
