--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -4,7 +4,7 @@
       <mat-card-title><h2>Log in</h2></mat-card-title>
     </mat-card-header>
     <mat-card-content>
-      <form class="customform__form" (submit)="onSubmit()">
+      <form class="customform__form" #loginForm="ngForm" (ngSubmit)="onSubmit(loginForm)">
           <mat-form-field>
             <input matInput name="email" [(ngModel)]="email" placeholder="Enter your email" required>
           </mat-form-field>
