--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -10,7 +10,7 @@
             User
         </a>
     </mat-menu>
-    <button *ngIf="!isLoggedIn" mat-button routerLink="/login">Login</button>
-    <button *ngIf="isLoggedIn" mat-button (click)="logout()">Logout</button>
-    <button *ngIf="isLoggedIn" mat-button routerLink="/user">{{loggedInUser}}</button>
+    <button *ngIf="!(currentUser$ | async)" mat-button routerLink="/login">Login</button>
+    <button *ngIf="currentUser$ | async" mat-button (click)="logout()">Logout</button>
+    <button *ngIf="currentUser$ | async" mat-button routerLink="/user">{{(currentUser$ | async)?.email}}</button>
 </mat-toolbar>
