Dodanie admin guarda, stworzenie komponentu manage-games

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -9,6 +9,10 @@
             <mat-icon>face</mat-icon>
             User
         </a>
+        <a routerLink="/manage-games" mat-menu-item>
+            <mat-icon>build</mat-icon>
+            Zarządzaj grami
+        </a>
     </mat-menu>
     <button *ngIf="!(currentUser$ | async)" mat-button routerLink="/login">Login</button>
     <button *ngIf="currentUser$ | async" mat-button (click)="logout()">Logout</button>
