--- a/src/styles.css
+++ b/src/styles.css
@@ -60,3 +60,6 @@ body {
     background-color: #f8d7da;
     border-color: #f5c6cb;
 }
+
+#flashMessages .flash-message{display:none;}
+#flashMessages .flash-message:last-child{display:block;}
