--- a/src/app/components/games-list-compact-item/games-list-compact-item.component.html
+++ b/src/app/components/games-list-compact-item/games-list-compact-item.component.html
@@ -1,3 +1,8 @@
-<p>
-  game-list-compact-item works!
-</p>
+ <mat-list-item role="listitem" >
+   <mat-icon mat-list-icon>folder</mat-icon>
+    <h4 mat-line>{{game.name}}</h4>
+    <p mat-line> {{game.isAvailable}} </p>
+
+  <button mat-raised-button color="accent">Edytuj <mat-icon mat-list-icon>edit</mat-icon></button>
+  <button mat-raised-button color="#FF0000">Usuń <mat-icon mat-list-icon>edit</mat-icon></button>
+ </mat-list-item>
