--- a/src/app/components/games-list-compact/games-list-compact.component.html
+++ b/src/app/components/games-list-compact/games-list-compact.component.html
@@ -1,10 +1,7 @@
 <div *ngIf="(game$ | async) as games; else loading">
   <mat-list role="list">
-    <mat-list-item role="listitem" *ngFor="let game of games">
-      <mat-icon mat-list-icon>folder</mat-icon>
-    <h4 mat-line>{{game.name}}</h4>
-    <p mat-line> {{game.isAvailable}} </p>
-    </mat-list-item>
+    
+    <app-games-list-compact-item *ngFor="let g of games" [game]="g"></app-games-list-compact-item>
   </mat-list>
 </div>
 
