Dodanie komponentu z akcjami i ubranie formularza do edytowanie gier

--- a/src/app/components/game-form/game-form.component.html
+++ b/src/app/components/game-form/game-form.component.html
@@ -1,3 +1,10 @@
-<p>
-  game-form works!
-</p>
+<form novalidate>
+  <mat-form-field>
+    <label>Tytuł</label>
+    <input matInput type="text">
+  </mat-form-field>
+  <mat-form-field>
+    <label>Opis</label>
+    <textarea matInput type="text"></textarea>
+  </mat-form-field>
+</form>
