Wstrzykiwanie komponentu EditGame do modala

--- a/src/app/components/game-form/game-form.component.html
+++ b/src/app/components/game-form/game-form.component.html
@@ -14,5 +14,5 @@
       type="text">
     </textarea>
   </mat-form-field>
-   <button type="submit">Submit</button>
+  <button mat-button type="submit">Submit</button>
 </form>
