--- a/src/app/components/edit-game/edit-game.component.html
+++ b/src/app/components/edit-game/edit-game.component.html
@@ -1,3 +1,3 @@
-<app-game-form [game]="data"></app-game-form>
+<app-game-form [game]="data" (submitted)="closePopup()"></app-game-form>
 <mat-divider></mat-divider>
 <app-actions-game></app-actions-game>
