Zmiana koloru buttona w game-form

--- a/src/app/components/game-form/game-form.component.html
+++ b/src/app/components/game-form/game-form.component.html
@@ -16,5 +16,5 @@
       type="text">
     </textarea>
   </mat-form-field>
-  <button mat-button type="submit">Submit</button>
+  <button mat-button mat-raised-button color="#FF0000" type="submit">Submit</button>
 </form>
