Dodawanie nowy gier z panelu admina

--- a/src/app/components/games-list-compact-item/games-list-compact-item.component.html
+++ b/src/app/components/games-list-compact-item/games-list-compact-item.component.html
@@ -3,7 +3,7 @@
     <h4 mat-line>{{game.name}}</h4>
     <p mat-line> {{game.description}} </p>
 
-  <button mat-raised-button color="accent" (click)="openDialog()" >Edytuj <mat-icon mat-list-icon>edit</mat-icon></button>
-  <button mat-raised-button color="#FF0000" (click)="deleteItem(game)">Usuń <mat-icon mat-list-icon>delete</mat-icon></button>
+  <button mat-raised-button (click)="openDialog()" >Edytuj <mat-icon mat-list-icon>edit</mat-icon></button>
+  <button mat-raised-button color="warn" (click)="deleteItem(game)">Usuń <mat-icon mat-list-icon>delete</mat-icon></button>
   <ng-content></ng-content>
 </mat-list-item>
