--- a/src/app/components/add-game-form/add-game-form.component.html
+++ b/src/app/components/add-game-form/add-game-form.component.html
@@ -21,5 +21,5 @@
     formControlName="isAvailable">
       Dostępna
   </mat-slide-toggle>
-  <button mat-button mat-raised-button color="#FF0000" type="submit">Submit</button>
+  <button mat-button mat-raised-button type="submit">Dodaj</button>
 </form>
