--- a/src/app/components/games/games.component.html
+++ b/src/app/components/games/games.component.html
@@ -1,34 +1,31 @@
 <div *ngIf="(game$ | async) as games; else loading">
-  <mat-grid-list cols="4">
-    <mat-grid-tile *ngFor="let game of games">
-          <mat-card>
-            <mat-card-header>
-              <img mat-card-avatar src="../../../assets/mock.jpg">
-              <mat-card-title>
-                <h3>
-                  {{game.name}}
-                </h3>
-              </mat-card-title>
-            </mat-card-header>
-            <mat-card-content>
-              <div>
-                Status: 
-                <span *ngIf="game.isAvailable; else borrowedGame">Wolna</span>
-                <ng-template #borrowedGame>
-                  <span >Wypożyczona</span>
-                  <h3>{{game.borrowDate | date:'short'}}</h3>
-                  <h3 *ngIf="game.borrower !== (currentUser$ | async)?.email">Wypożyczona przez: {{game.borrower}}</h3>
-                </ng-template>
-              </div>
-              <p>{{game.description}}</p>
-            </mat-card-content>
-            <mat-card-actions>
-              <button *ngIf="game.isAvailable" (click)="borrowGame(game)" mat-raised-button color="accent">Wypożycz</button>
-              <button *ngIf="!game.isAvailable && game.borrower === (currentUser$ | async)?.email" (click)="returnGame(game)" mat-raised-button color="accent">Zwróc</button>
-            </mat-card-actions>
-          </mat-card>
-    </mat-grid-tile>
-  </mat-grid-list>
+  <div class="card-container">
+    <mat-card *ngFor="let game of games">
+      <img mat-card-lg-image src="../../../assets/mock.jpg">
+      <mat-card-header>
+        <h3>
+          {{game.name}}
+        </h3>
+      </mat-card-header>
+      <mat-card-content>
+        <div>
+          Status:
+          <span *ngIf="game.isAvailable; else borrowedGame">Wolna</span>
+          <ng-template #borrowedGame>
+            <span>Wypożyczona</span>
+            <h3>{{game.borrowDate | date:'short'}}</h3>
+            <h3 *ngIf="game.borrower !== (currentUser$ | async)?.email">Wypożyczona przez: {{game.borrower}}</h3>
+          </ng-template>
+        </div>
+        <p>{{game.description}}</p>
+      </mat-card-content>
+      <mat-card-actions>
+        <button *ngIf="game.isAvailable" (click)="borrowGame(game)" mat-raised-button color="accent">Wypożycz</button>
+        <button *ngIf="!game.isAvailable && game.borrower === (currentUser$ | async)?.email" (click)="returnGame(game)" mat-raised-button
+          color="accent">Zwróc</button>
+      </mat-card-actions>
+    </mat-card>
+  </div>
 </div>
 
 <ng-template #loading>Wczytuję gry...</ng-template>
